# package-repository-server

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md
.cursor/rules/: angular.mdc  authentication.mdc  general.mdc  infrastructure.mdc  package-processing.mdc  rust.mdc  security.mdc
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
config/: sso.env.example
docs/: SSO_CONFIGURATION.md  SSO_IMPLEMENTATION_SUMMARY.md  STATELESS_DESIGN.md
server/: Cargo.toml
server/benches/: benchmarks.rs
server/src/: lib.rs  main.rs  middleware.rs  security.rs  sso_config.rs  sso_handlers.rs  sso_session.rs  sso_state.rs  utils.rs
server/src/handlers/: auth.rs  cargo.rs  docker.rs  maven.rs  mod.rs  npm.rs  nuget.rs  packages.rs  pypi.rs  registry_types.rs  setup.rs  upload.rs
server/src/processor/: mod.rs
server/src/storage/: mod.rs
server/tests/: integration_tests.rs
tests/e2e/: Dockerfile.test-runner  docker-compose.test.yml
tests/e2e/scripts/: run-e2e-tests.sh
webui/: README.md  angular.json  package.json  pnpm-lock.yaml
webui/src/: index.html  styles.css
webui/src/app/: app.routes.ts  app.ts
webui/src/app/core/guards/: auth.guard.ts
webui/src/app/core/interceptors/: auth.interceptor.ts
webui/src/app/core/services/: api.service.ts  auth.service.ts
webui/src/app/features/dashboard/: dashboard.component.ts
webui/src/app/features/settings/: settings.component.ts
webui/src/app/features/upload/: upload.component.ts
(+10 files in other folders)
