[package]
name = "package-repo-server"
version = "0.1.0"
edition = "2021"
description = "Multi-format package repository server API"
authors = ["Pegasus Heavy Industries LLC"]
license = "Apache-2.0"

[lib]
name = "package_repo_server"
path = "src/lib.rs"

[[bin]]
name = "package-repo-server"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
actix-files = "0.6"
actix-cors = "0.7"
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
config = "0.14"
aws-sdk-s3 = "1"
aws-config = "1"
bytes = "1"
mime_guess = "2"
sanitize-filename = "0.5"
sha2 = "0.10"
sha1 = "0.10"
base64 = "0.22"
hex = "0.4"
zip = "2"
flate2 = "1"
# OAuth2/OIDC and JWT dependencies
oauth2 = "4"
openidconnect = "3"
jsonwebtoken = "9"
reqwest = { version = "0.11", features = ["json"] }
url = "2"
# Stateless encryption for OAuth state
aes-gcm = "0.10"
rand = "0.8"

[dev-dependencies]
actix-rt = "2"
actix-test = "0.1"
tempfile = "3"
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serial_test = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
